Implementacao falha do RegistroAluno

--- a/gui/ta-gui/src/app/Atendimento/Atendimento.component.html
+++ b/gui/ta-gui/src/app/Atendimento/Atendimento.component.html
@@ -5,7 +5,7 @@
 
     <nav>
         <a name="RegistroAlunos" routerLink="/RegistroAlunos">Registrar alunos</a>
-        <a routerLink="/BuscarConsulta">Buscar consulta</a>
+        <a name = "BuscarConsulta" routerLink="/BuscarConsulta">Buscar consulta</a>
         <a name="MarcarConsulta" routerLink="/MarcarConsulta">Marcar consulta</a>
     </nav>
 
