Implementando as features de angular e funcionamento correto do roteamento

--- a/gui/ta-gui/src/app/app.component.html
+++ b/gui/ta-gui/src/app/app.component.html
@@ -6,7 +6,7 @@
 
 <nav>
     <a name="atividadeEmCampo" routerLink="/atividadeEmCampo">Atividade em Campo</a>
-    <a name="Atendimento" routerLink="/Atendimento">Atendimento</a>
+    <a name="Atendimento" routerLink="/atendimento">Atendimento</a>
 </nav>
 
 <router-outlet></router-outlet>
