Adicionado html de 2 componentes e classes.

--- a/gui/ta-gui/src/app/atendimento/buscarconsulta/buscarconsulta.component.html
+++ b/gui/ta-gui/src/app/atendimento/buscarconsulta/buscarconsulta.component.html
@@ -1,3 +1,30 @@
-<p>
-  buscarconsulta works!
-</p>
+<html (mousemove)="onMove()">
+
+
+<h3>
+    Buscar Consulta:
+</h3>
+
+<table>
+<tr>
+    <td><label>Profissional </label></td>
+    <select name=profissionais>
+        <option value="padrao">
+            Selecione o profissional
+        </option>
+    </select>
+</tr>
+<tr>
+    <td><label>Mês </label></td>
+    <select name=profissionais>
+        <option value="padrao">
+            1
+        </option>
+    </select>
+</tr>
+<tr>
+    <td><button (click)="criarAluno(aluno)">Buscar</button></td>
+</tr>
+</table>
+
+</html>
