--- a/gui/ta-gui/src/app/atendimento/registro-aluno/registro-aluno.component.html
+++ b/gui/ta-gui/src/app/atendimento/registro-aluno/registro-aluno.component.html
@@ -30,27 +30,27 @@
 
 <tr>
    <td><label>Nome </label></td>
-   <td><input [(ngModel)]="aluno.nome" name="namebox"></td>
+   <td><input [(ngModel)]="alunoProfissional.aluno.nome" name="namebox"></td>
 </tr>
 <tr>
     <td><label>Curso </label></td>
-    <td><input [(ngModel)]="aluno.curso" name="cursobox"> </td>
+    <td><input [(ngModel)]="alunoProfissional.aluno.curso" name="cursobox"> </td>
  </tr>
 <tr>
    <td><label>CPF </label></td>
-   <td><input [(ngModel)]="aluno.cpf" name="cpfbox"></td>
+   <td><input [(ngModel)]="alunoProfissional.aluno.cpf" name="cpfbox"></td>
 </tr>
 <tr>
     <td><label>Gênero </label></td>
-    <td><input [(ngModel)]="aluno.genero" name="generobox"></td>
+    <td><input [(ngModel)]="alunoProfissional.aluno.genero" name="generobox"></td>
  </tr>
 <tr>
    <td><label>Telefone </label></td>
-   <td><input [(ngModel)]="aluno.telefone" name="telefonebox"></td>
+   <td><input [(ngModel)]="alunoProfissional.aluno.telefone" name="telefonebox"></td>
 </tr>
 <tr>
     <td><label>Profissional </label></td>
-    <td><input [(ngModel)]="profissional.nome" name="profissionalnamebox"> </td>
+    <td><input [(ngModel)]="alunoProfissional.profissional.nome" name="profissionalnamebox"> </td>
 </tr>
 <tr>
     <td><label>Status </label></td>
@@ -58,11 +58,11 @@
  </tr>
  <tr>
     <td><label>Tipo de atendimento </label></td>
-    <td><input [(ngModel)]="aluno.tipoAtendimento" name="tipoDeAtendimento"></td>
+    <td><input [(ngModel)]="alunoProfissional.tipoAtendimento" name="tipoDeAtendimento"></td>
  </tr>
 <tr>
    <td><label>Especialidade </label></td>
-   <td><input [(ngModel)]="profissional.especialidade" name="especialidadebox"></td>
+   <td><input [(ngModel)]="alunoProfissional.profissional.especialidade" name="especialidadebox"></td>
 </tr>
 <tr>
     <td><button (click)="criarAluno(aluno)">Adicionar</button></td>
