Adicionado serviço de alunoProfissional

--- a/gui/ta-gui/src/app/atendimento/registro-aluno/registro-aluno.component.html
+++ b/gui/ta-gui/src/app/atendimento/registro-aluno/registro-aluno.component.html
@@ -9,7 +9,7 @@
 </button>
 
 <table>
-        <tr *ngIf="mostrarLista">
+        <tr *ngIf="mostraLista">
            <th>Nome</th>
            <th>Curso </th>
            <th>CPF </th>
