Implementado cenário de cadastrar alunos a partir do banco de dados

--- a/gui/ta-gui/src/app/atendimento/atendimento.component.html
+++ b/gui/ta-gui/src/app/atendimento/atendimento.component.html
@@ -4,9 +4,9 @@
     </h2>
 
     <nav>
-        <a routerLink="/registro">Registrar alunos</a>
-        <a routerLink="/buscarConsulta">Buscar consulta</a>
-        <a routerLink="/marcarConsulta">Marcar consulta</a>
+        <a name="registro" routerLink="/registro">Registrar alunos</a>
+        <a name="buscarConsulta" routerLink="/buscarConsulta">Buscar consulta</a>
+        <a name="marcarConsulta" routerLink="/marcarConsulta">Marcar consulta</a>
     </nav>
 
     <!-- <router-outlet></router-outlet> -->
