Adicionado ngControl nos inputs do registro

--- a/gui/ta-gui/src/app/atendimento/registro-aluno/registro-aluno.component.html
+++ b/gui/ta-gui/src/app/atendimento/registro-aluno/registro-aluno.component.html
@@ -30,23 +30,23 @@
 
 <tr>
    <td><label>Nome </label></td>
-   <td><input [(ngModel)]="alunoProfissional.aluno.nome" name="namebox"></td>
+   <td><input ngControl="nameInp" [(ngModel)]="alunoProfissional.aluno.nome" name="namebox"></td>
 </tr>
 <tr>
     <td><label>Curso </label></td>
-    <td><input [(ngModel)]="alunoProfissional.aluno.curso" name="cursobox"> </td>
+    <td><input ngControl="cursoInp" [(ngModel)]="alunoProfissional.aluno.curso" name="cursobox"> </td>
  </tr>
 <tr>
    <td><label>CPF </label></td>
-   <td><input [(ngModel)]="alunoProfissional.aluno.cpf" name="cpfbox"></td>
+   <td><input ngControl="cpfInp" [(ngModel)]="alunoProfissional.aluno.cpf" name="cpfbox"></td>
 </tr>
 <tr>
     <td><label>Gênero </label></td>
-    <td><input [(ngModel)]="alunoProfissional.aluno.genero" name="generobox"></td>
+    <td><input ngControl="generoInp" [(ngModel)]="alunoProfissional.aluno.genero" name="generobox"></td>
  </tr>
 <tr>
    <td><label>Telefone </label></td>
-   <td><input [(ngModel)]="alunoProfissional.aluno.telefone" name="telefonebox"></td>
+   <td><input ngControl="telefoneInp" [(ngModel)]="alunoProfissional.aluno.telefone" name="telefonebox"></td>
 </tr>
 <tr>
     <td><label>Profissional </label></td>
