--- a/gui/ta-gui/src/app/atendimento/buscarconsulta/buscarconsulta.component.html
+++ b/gui/ta-gui/src/app/atendimento/buscarconsulta/buscarconsulta.component.html
@@ -1,5 +1,22 @@
 <html (mousemove)="onMove()">
 
+<table>
+    <tr *ngIf="mostraLista">
+        <th>Nome</th>
+        <th>Curso </th>
+        <th>CPF </th>
+        <th>Gênero </th>
+        <th>Telefone </th>
+    </tr>
+    <tr *ngFor="let c of consulta" name="consultalist">
+        <td name="nomelist">{{a.nome}}</td>
+        <td name="cursolist">{{a.curso}}</td>
+        <td name="cpflist">{{a.cpf}}</td>
+        <td name="generolist">{{a.genero}}</td>
+        <td name="telefonelist">{{a.telefone}}</td>
+        <td><button (click)="preencher(a)">Selecionar {{a.nome}}</button></td>
+    </tr>
+</table>
 
 <h3>
     Buscar Consulta:
@@ -8,14 +25,34 @@
 <table>
 <tr>
     <td><label>Profissional </label></td>
-    <td><input [(ngModel)]="consulta.profissional.nome"> </td>
+    <td><input [(ngModel)]="consulta.profissional.nome" name="professionalbox"> </td>
 </tr>
 <tr>
     <td><label>Mês </label></td>
-    <td><input [(ngModel)]="consulta.mes"> </td>
+    <td><input [(ngModel)]="consulta.mes" name="monthbox"> </td>
 </tr>
 <tr>
     <td><button (click)="mostrarConsultas()">Buscar</button></td>
 </tr>
 </table>
+
+<table>
+    <tr *ngIf="mostraConsultas">
+        <th>Nome</th>
+        <th>Especialidade </th>
+        <th>Mes </th>
+        <th>Dia </th>
+        <th>Hora </th>
+        <th>Minuto </th>
+    </tr>
+    <tr *ngFor="let c of consulta" name="consultalist">
+        <td name="nomelist">{{c.alunoProfissional.profissional.nome}}</td>
+        <td name="especialidadelist">{{c.alunoProfissional.profissional.especialidade}}</td>
+        <td name="meslist">{{c.mes}}</td>
+        <td name="dialist">{{c.dia}}</td>
+        <td name="horalist">{{c.hora}}</td>
+        <td name="minutolist">{{c.hora}}</td>
+    </tr>
+</table>
+
 </html>
