funcionalidade de auto-preenchimento implementado

--- a/gui/ta-gui/src/app/atendimento/buscarconsulta/buscarconsulta.component.html
+++ b/gui/ta-gui/src/app/atendimento/buscarconsulta/buscarconsulta.component.html
@@ -25,7 +25,7 @@
 <table>
 <tr>
     <td><label>Profissional </label></td>
-    <td><input [(ngModel)]="consulta.profissional.nome" name="professionalbox"> </td>
+    <td><input [(ngModel)]="consulta.alunoProfissional.profissional.nome" name="professionalbox"> </td>
 </tr>
 <tr>
     <td><label>Mês </label></td>
@@ -33,6 +33,7 @@
 </tr>
 <tr>
     <td><button (click)="mostrarConsultas()">Buscar</button></td>
+    <td *ngIf="mensagemErro">Preencha todos os campos</td>
 </tr>
 </table>
 
