Integração do meu projeto com o de Leão.

--- a/gui/ta-gui/src/app/app.component.html
+++ b/gui/ta-gui/src/app/app.component.html
@@ -7,6 +7,7 @@
 <nav>
     <a name="atividadeEmCampo" routerLink="/atividadeEmCampo">Atividade em Campo</a>
     <a name="Atendimento" routerLink="/atendimento">Atendimento</a>
+    <a name = "Profissional" routerLink="/profissional">Atendimento Profissional</a>
 </nav>
 
 <router-outlet></router-outlet>
