--- a/gui/ta-gui/src/app/atendimentoProfissional/profissional.component.html
+++ b/gui/ta-gui/src/app/atendimentoProfissional/profissional.component.html
@@ -33,12 +33,14 @@
                   <th>CPF</th><br>
                   <th>E-mail para contato.</th><br>
                   <th>Expedientes Cancelados.</th>
+                  <th>Informações.</th>
                </tr>
                <tr>
                   <td>{{profissionalBusca.nome}}</td><br>
                   <td>{{profissionalBusca.cpf}}</td><br>
                   <td>{{profissionalBusca.email}}</td><br>
-                  <td>{{profissionalBusca.cancelamentos}}</td><br>
+                  <td>{{profissionalBusca.cancelamentos}}</td>
+                  <td>{{profissionalBusca.informacoes}}</td><br>
                   <td><button (click)="removerAndShowLess(profissionalBusca)">Demitir</button></td>
                   <td><button (click)="profissionalBusca.detalhes = !profissionalBusca.detalhes">Detalhes</button></td>
                   
